CopiedSpace::startedCopying should not call MarkedSpace::capacity https://bugs.webkit.org/show_bug.cgi?id=121045

Reviewed by Geoffrey Garen.

MarkedSpace::capacity() iterates every block in MarkedSpace. Instead we should just
keep track of our total capacity in MarkedSpace as we add and remove MarkedBlocks.

* heap/MarkedSpace.cpp:
(JSC::MarkedSpace::freeBlock):
* heap/MarkedSpace.h:
(JSC::MarkedSpace::didAddBlock):
(JSC::MarkedSpace::capacity):


Canonical link: https://commits.webkit.org/138980@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@155406 268f45cc-cd09-0410-ab3c-d52691b4dbfc